feat(infra): 迁移 TenantContext 到 Java 21 ScopedValue
使用 ScopedValue 替代 ThreadLocal 实现租户上下文管理，提升虚拟线程环境下的性能和安全性。

主要变更：
- 添加 Maven 编译器配置支持 --enable-preview 预览特性
- TenantContext 使用 ScopedValue 存储租户ID，支持自动传播和作用域管理
- 新增 TenantContextHolder 作为 Servlet 请求生命周期的适配层
- 保留 runWithTenant/supplyWithTenant API 用于异步任务场景

优势：
- 不可变性：一旦设置不能修改，避免意外修改
- 自动传播：虚拟线程间自动传递值，无需手动处理
- 作用域管理：作用域结束自动清理，无需手动 clear()
- 内存安全：虚拟线程环境下无内存泄漏风险